# promptgen

./: .gitignore  Cargo.toml  README.md  TODO.md  package.json
bindings/: challenge-personas.yaml  consulting-personas.yaml  editor-pro-tech.yaml  gpt35-failures.yaml  gpt4-failures.yaml  midjourney-examples.yaml  personas.json  scientist-personas.yaml  social-media-personas.yaml  tone-critic-personas.yaml
src/: index.ts  main.rs
src/prompts/: confirm.yaml  example.yaml  prompt-template.yaml
src/prompts/bing/: accurate.yaml  research.yaml
src/prompts/gpt/: author.yaml  challenge-network.yaml  editor.yaml  judge.yaml  persona.yaml  problem-solver.yaml  prompt-iteration.yaml  question-ideation.yaml  social-media.yaml  tone-critique.yaml
src/prompts/midjourney/: gpt-to-mj.yaml
